# firebird

./: CMakeLists.txt  acx_pthread.m4  configure.ac
builds/cmake/: BuildFunctions.cmake  Configure.cmake
builds/install/arch-specific/mingw/: fb_config.in
builds/posix/: Makefile.in  Makefile.in.examples  Makefile.in.extauth  Makefile.in.plugins_examples  make.defaults  make.rules  make.shared.targets  make.shared.variables  prefix.mingw
examples/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: isc.cpp  isc_sync.cpp  unicode_util.cpp  utils.cpp  utils_proto.h
src/common/classes/: FpeControl.h
src/common/os/: guid.h
src/gpre/: CMakeLists.txt
src/gpre/languages/: fbrmclib.cpp
src/include/: firebird.h
src/iscguard/: iscguard.cpp
src/jrd/: build_no.h  jrd.cpp  tpc.cpp  version.h  version.rc
src/misc/: writeBuildNum.sh
src/remote/: CMakeLists.txt  inet.cpp  protocol.cpp  remote.cpp
src/utilities/: CMakeLists.txt
src/yvalve/: gds.cpp
src/yvalve/config/os/win32/: config_root.cpp
